--- a/src/app.scss
+++ b/src/app.scss
@@ -1,44 +1,51 @@
+@font-face {
+  font-family: kamerik-3d;
+  src: url(/fonts/kamerik205-heavy.woff2);
+  font-weight: 900;
+}
+
 /* html {
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
   } */
-  
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "DM Sans", sans-serif;
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "DM Sans", sans-serif;
+}
+
+body {
+  font-family: kamerik-3d;
+  background: #070709;
+  /* color: #0c0c1d; */
+}
+
+section {
+  height: 100vh;
+}
+
+@mixin hover {
+  &:hover {
+    @content; 
   }
-  
-  body {
-    background-color: lightgray;
-    color: #0c0c1d;
+}
+
+@mixin mobile {
+  @media (max-width: 738px) {
+    @content;
   }
-  
-  a {
-    text-decoration: none;
-    color: inherit;
+}
+
+@mixin tablet {
+  @media (max-width: 1024px) {
+    @content;
   }
-  
-  section {
-    height: 100vh;
-    scroll-snap-align: center;
-    overflow: hidden;
+}
+
+@mixin desktop {
+  @media (max-width: 1366px) {
+    @content;
   }
-  
-  @mixin mobile {
-    @media (max-width: 738px) {
-      @content;
-    }
-  }
-  @mixin tablet {
-    @media (max-width: 1024px) {
-      @content;
-    }
-  }
-  @mixin desktop {
-    @media (max-width: 1366px) {
-      @content;
-    }
-  }
-  
+}
