--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -8,12 +8,13 @@
   color: black;
   
   .bg {
-    z-index: 999;
+    z-index: 9999;
     position: fixed;
-    top: 0;
-    left: 0;
+    top: 25%;
+    left: 5%;
     bottom: 0;
     width: 400px;
+    height: 100vh;
     background: white;
 
     @include mobile {
@@ -41,14 +42,14 @@
   }
 
   button {
-    z-index: 999;
+    z-index: 9999;
     position: fixed;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     position: fixed;
-    top: 25px;
-    left: 25px;
+    top: 35%;
+    left: 10%;
     background-color: transparent;
     border: none;
     cursor: pointer;
