--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -18,147 +18,110 @@ $transition: 1.5s cubic-bezier(.05, .5, 0, 1);
     perspective: 1000px;
     overflow: hidden;
     color: #fff;
-}
-
-.layers__container {
-    height: 100vh;
-    min-height: 500px;
-    transform-style: preserve-3d;
-    transform: rotateX(var(--move-y)) rotateY(var(--move-x));
-    will-change: transform;
-    transition: transform var($transition);
-}
-
-.layers__item,
-.layers__itemm {
-    position: absolute;
-    inset: -5vw;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.layer-1 {
-    transform: translateZ(-55px) scale(1.06);
-}
-
-.layer-2 {
-    transform: translateZ(80px) scale(.88);
-}
-
-.layer-3 {
-    transform: translateZ(180px) scale(.8);
-}
-
-.layer-4 {
-    transform: translateZ(190px) scale(.9);
-}
-
-.layer-5 {
-    transform: translateZ(300px) scale(.9);
-}
-
-.layer-6 {
-    transform: translateZ(380px);
-    pointer-events: none;
-}
-
-.hero-content {
-    font-size: calc(#{$index} * 2.9);
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: calc(#{$index} * -.15);
-    line-height: 1.35em;
-}
-
-.hero-content span {
-    display: block;
-}
-
-h2 {
-    font-size: 30px;
-    color: #ffc93c;
-    letter-spacing: 10px;
-  }
-
-  h1 {
-    font-size: 88px;
-
-    @include mobile {
-      font-size: 36px;
-    }
-  }
-
-.hero-content__p {
-    text-transform: none;
-    font-family: merriweather-italic-3d;
-    letter-spacing: normal;
-    font-size: calc(#{$index} * .73);
-    line-height: 3;
-}
-
-.button-start {
-    font-family: Arial;
-    font-weight: 600;
-    text-transform: uppercase;
-    font-size: calc(#{$index} * .71);
-    letter-spacing: -.02vw;
-    padding: calc(#{$index} * .7) calc(#{$index} * 1.25);
-    background-color: transparent;
-    color: #fff;
-    border-radius: 10em;
-    border: rgb(255 255 255 / .4) 3px solid;
-    outline: none;
-    cursor: pointer;
-    margin-top: calc(#{$index} * 2.5);
-}
 
 
-.buttons {
-    button {
-        padding: 20px;
-        border: 1px solid white;
-        border-radius: 10px;
-        background-color: transparent;
-        color: white;
-        margin-right: 20px;
-        cursor: pointer;
-        font-weight: 300;
-    }
-}
-
-img {
-    width: 50px;
-}
-
-.imageContainer {
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-
-    @include mobile {
-        height: 50%;
-        width: 100%;
-        top: unset;
-        bottom: 0;
+    .layers__container {
+        height: 100vh;
+        min-height: 500px;
+        transform-style: preserve-3d;
+        transform: rotateX(var(--move-y)) rotateY(var(--move-x));
+        will-change: transform;
+        transition: transform var($transition);
     }
 
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+    .layers__item {
+        position: absolute;
+        inset: -5vw;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
-}
 
-.slidingTextContainer {
-    position: absolute;
-    font-size: 30vh;
-    bottom: -115px;
-    white-space: nowrap;
-    color: #ffffff09;
-    width: 50%;
-    font-weight: bold;
+    .layer-1 {
+        transform: translateZ(-55px) scale(1.06);
+    }
+
+    /*     .layer-2 {
+        transform: translateZ(80px) scale(.88);
+    } */
+
+    .layer-3 {
+        transform: translateZ(180px) scale(.8);
+    }
+
+    .layer-4 {
+        transform: translateZ(190px) scale(.9);
+    }
+
+    /*     .layer-5 {
+        transform: translateZ(300px) scale(.9);
+    } */
+
+    /*    .layer-6 {
+        transform: translateZ(380px);
+        pointer-events: none;
+    } */
+
+    .slidingTextContainer {
+        position: absolute;
+        font-size: 30vh;
+        bottom: -115px;
+        white-space: nowrap;
+        color: #ffffff09;
+        width: 50%;
+        font-weight: bold;
+    }
+
+    .hero-content {
+        font-size: calc(#{$index} * 2.9);
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: calc(#{$index} * -.15);
+        line-height: 1.35em;
+
+        span {
+            display: block;
+        }
+
+        h2 {
+            font-size: 30px;
+            color: #ffc93c;
+            letter-spacing: 10px;
+        }
+
+        h1 {
+            font-size: 88px;
+
+            @include mobile {
+                font-size: 36px;
+            }
+        }
+    }
+
+    .hero-content__p {
+        text-transform: none;
+        font-family: merriweather-italic-3d;
+        letter-spacing: normal;
+        font-size: calc(#{$index} * .73);
+        line-height: 3;
+    }
+
+    .buttons {
+        button {
+            padding: 20px;
+            border: 1px solid white;
+            border-radius: 10px;
+            background-color: transparent;
+            color: white;
+            margin-right: 20px;
+            cursor: pointer;
+            font-weight: 300;
+        }
+
+        img {
+            width: 50px;
+        }
+    }
 }
