--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,10 +1,11 @@
 @import "../../app.scss";
 
-.services {
+.aboutContainer {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 4rem;
 
     .textContainer {
         flex: 1;
@@ -46,7 +47,40 @@
             width: 100%;
         }
 
-        .title {
+        .ssd {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            width: 70%;
+        }
+
+        .sectionSubText {
+            font-size: 18px;
+            --tw-text-opacity: 1;
+            color: rgb(170 166 195 / var(--tw-text-opacity));
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            margin: 0;
+        }
+
+        .sectionHeadText {
+            font-size: 60px;
+            --tw-text-opacity: 1;
+            color: rgb(255 255 255 / var(--tw-text-opacity));
+            font-weight: 900;
+            margin: 0;
+        }
+
+        .text-p {
+            --tw-text-opacity: 1;
+            color: rgb(170 166 195 / var(--tw-text-opacity));
+            line-height: 30px;
+            font-size: 17px;
+            max-width: 48rem;
+            margin-top: 1rem;
+        }
+
+        /* .title {
             display: flex;
             align-items: center;
             gap: 50px;
@@ -56,22 +90,26 @@
                 text-align: center;
                 gap: 20px;
             }
-
-     
-        }
+        } */
     }
 
     .listContainer {
-        flex: 2;
         display: flex;
-        max-width: 1366px;
-        margin: auto;
+        justify-content: center;
+        max-width: 100%;
         margin-top: 30px;
-        gap: 10px;
+
 
         @include mobile {
             flex-direction: column;
             width: 100%;
+        }
+
+        .listContent {
+            display: flex;
+            align-items: center;
+            width: 70%;
+            gap: 10px;
         }
 
         .box {
@@ -92,139 +130,148 @@
                 padding: 10px;
             }
 
-            .contentBox{
-                display: flex;
-                flex-direction: column;
-                justify-content: space-around;
+            .card {
+                position: relative;
+                width: 300px;
+                height: 400px;
+                overflow: hidden;
+                border-radius: 15px;
+                background-color: #070709;
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+                transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+                    box-shadow 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             }
 
-                h3{
-                    color: orange;
-                }
+            .card:hover {
+                transform: scale(1.1) rotate(10deg);
+                box-shadow: 0 20px 40px rgba(0, 0, 0, 0.7);
+            }
 
-            p {
-                color: white;
-                @include mobile {
-                    display: none;
+            .card:hover {
+                opacity: 0.9;
+            }
+
+            .card:hover .card-image {
+                transform: scale(1.2);
+            }
+
+            .card-image {
+                height: 60%;
+                background-size: cover;
+                background-position: center;
+                clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+                filter: grayscale(50%);
+            }
+
+            @keyframes pulse {
+                to {
+                    transform: scale(1.1);
                 }
             }
 
+            .card-text {
+                padding: 20px;
+                text-align: center;
+                color: #ecf0f1;
+                transition: transform 0.3s ease-in-out;
+
+                h2 {
+                    margin: 0;
+                    font-size: 24px;
+                }
+
+                p {
+                    margin: 10px 0 0;
+                    font-size: 14px;
+                    opacity: 0.8;
+                }
+            }
+
+            .card:hover .card-text {
+                transform: translate(0, -10px);
+            }
+
+            .card::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
+                z-index: 1;
+            }
+
+            .card:hover .card-text {
+                text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            }
+
+            .card-image {
+                box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+            }
         }
     }
-}
 
 
-.sectionSubText{
-    font-size: 18px;
-    --tw-text-opacity: 1;
-    color: rgb(170 166 195 / var(--tw-text-opacity));
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    margin: 0;
-}
-
-.sectionHeadText{
-    font-size: 60px;
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-    font-weight: 900;
-    margin: 0;
-}
-
-.text-p{
-    --tw-text-opacity: 1;
-    color: rgb(170 166 195 / var(--tw-text-opacity));
-    line-height: 30px;
-    font-size: 17px;
-    max-width: 48rem;
-    margin-top: 1rem;
-
-}
-
-.ssd{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 70%;
-}
-
-.card {
-    position: relative;
-    width: 300px;
-    height: 400px;
-    overflow: hidden;
-    border-radius: 15px;
-    background-color: #070709; 
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275),
-                box-shadow 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.card:hover {
-    transform: scale(1.1) rotate(10deg);
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.7);
-}
-
-.card:hover {
-    opacity: 0.9;
-}
-
-.card:hover .card-image {
-    transform: scale(1.2);
-}
-
-.card-image {
-    height: 60%;
-    background-size: cover;
-    background-position: center;
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    filter: grayscale(100%);
-}
-
-@keyframes pulse {
-    to {
-        transform: scale(1.1);
+    .cardss {
+        gap: 2.5rem;
+        flex-wrap: wrap;
+        display: flex;
+        margin-top: 5rem;
+        width: 70%;
     }
-}
 
-.card-text {
-    padding: 20px;
-    text-align: center;
-    color: #ecf0f1;
-    transition: transform 0.3s ease-in-out;
-}
+    .titleContainerr {
+        width: 250px
+    }
 
-.card:hover .card-text {
-    transform: translate(0, -10px);
-}
+    .tiltContent {
+        background: "#00cea8";
+        background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+        background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+        --tw-shadow: 0px 35px 120px -15px #211e35;
+        --tw-shadow-colored: 0px 35px 120px -15px var(--tw-shadow-color);
+        box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+        padding: 1px;
+        border-radius: 20px;
 
-h2 {
-    margin: 0;
-    font-size: 24px;
-}
+        width: 100%;
+    }
 
-p {
-    margin: 10px 0 0;
-    font-size: 14px;
-    opacity: 0.8;
-}
+    .description {
+        padding-top: 1.25rem;
+        padding-bottom: 1.25rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
+        background-color: rgb(21, 16, 48, 1);
+        border-radius: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+        min-height: 20rem;
+        width: 360px;
+        display: flex;
+        text-align: center;
+    }
 
-.card::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
-    z-index: 1;
-}
+    .img {
+        -o-object-fit: contain;
+        object-fit: contain;
+        width: 4rem;
+        height: 4rem;
+    }
 
+    .text {
+        --tw-text-opacity: 1;
+        color: rgb(255, 255, 255, 1);
+        font-weight: 700;
+        font-size: 20px;
+        text-align: center;
+    }
 
-.card:hover .card-text {
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
+    .spanColor{
+        display: flex;
+        gap: 10px;
+    }
 
-.card-image {
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
