--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,38 +1,48 @@
 @import "../../app.scss";
+
 .sidebar {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  background-color: rgb(211, 65, 65);
   color: black;
-  
-  .bg {
-    z-index: 9999;
-    position: fixed;
-    top: 25%;
-    left: 5%;
-    bottom: 0;
-    width: 400px;
-    height: 100vh;
-    background: white;
+  width: 320px;
+  position: fixed;
+  z-index: 9999;
 
-    @include mobile {
+  .bg {
+    width: 100%;
+    height: 100vh;
+    background: #000;
+    z-index: 9999;
+
+    /* @include mobile {
       width: 200px;
-    }
+    } */
 
     .links {
-      position: absolute;
       width: 100%;
       height: 100%;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      gap: 20px;
+
+
+      .linksWrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 20px;
+      }
 
       a {
         font-size: 20px;
+        color: white;
+        text-decoration: none;
+
+        svg {
+          margin-right: 10px;
+        }
 
         @include mobile {
           font-size: 20px;
@@ -42,16 +52,30 @@
   }
 
   button {
-    z-index: 9999;
+   width: 50px;
+   height: 50px;
+   /*  //border-radius: 50%;
     position: fixed;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    position: fixed;
-    top: 35%;
-    left: 10%;
-    background-color: transparent;
     border: none;
     cursor: pointer;
+    top: 0;
+    left: 0; */
+  }
+}
+
+.sideNav{
+  background: $color-bg-secondary;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  /* height: 8vh; */
+  align-items: center;
+  gap: 10%;
+
+  h2 {
+    color: $color-text-primary;
   }
 }
