--- a/src/components/load/load.scss
+++ b/src/components/load/load.scss
@@ -6,10 +6,7 @@
     justify-content: center;
     height: 100vh;
     overflow: hidden;
-    //background: rgb(0, 254, 252);
-    background: radial-gradient(circle,
-            rgb(255, 255, 255) 0%,
-            rgba(16, 16, 16, 1) 95%);
+    background: white;
 }
 
 .logo-circle {
