--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,41 +4,11 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 4rem;
-
-    .textContainer {
-        flex: 1;
-        align-self: flex-end;
-        display: flex;
-        align-items: center;
-        gap: 20px;
-
-        @include mobile {
-            align-self: center;
-            text-align: center;
-            flex-direction: column;
-        }
-
-        p {
-            font-weight: 200;
-            font-size: 20px;
-            color: white;
-            text-align: right;
-        }
-
-        hr {
-            width: 500px;
-            border: none;
-            border-top: 0.5px solid white;
-
-            @include mobile {
-                width: 300px;
-            }
-        }
-    }
+    justify-content: center;
+    align-items: center;
 
     .titleContainer {
+        //width: 50%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -51,227 +21,366 @@
             display: flex;
             justify-content: center;
             flex-direction: column;
-            width: 70%;
+            width: 100%;
+            align-items: flex-start;
+
+            button {
+                background: #1C1E23;
+                border-width: 0;
+                border-radius: 5px;
+                color: #ffffff;
+                cursor: pointer;
+                font-size: 15px;
+                height: 50px;
+                width: 15.625rem;
+                letter-spacing: 5px;
+                padding: 0 20px;
+                margin-top: 1rem;
+                animation: customAni 2s ease 0s infinite normal none;
+
+                &:hover {
+                    color: $color-text-primary;
+                }
+
+                @keyframes customAni {
+                    0% {
+                        animation-timing-function: ease-out;
+                        transform: scale(1);
+                        transform-origin: center center;
+                    }
+
+                    10% {
+                        animation-timing-function: ease-in;
+                        transform: scale(0.91);
+                    }
+
+                    17% {
+                        animation-timing-function: ease-out;
+                        transform: scale(0.98);
+                    }
+
+                    33% {
+                        animation-timing-function: ease-in;
+                        transform: scale(0.87);
+                    }
+
+                    45% {
+                        animation-timing-function: ease-out;
+                        transform: scale(1);
+                    }
+                }
+            }
         }
 
         .sectionSubText {
-            font-size: 18px;
-            --tw-text-opacity: 1;
-            color: rgb(170 166 195 / var(--tw-text-opacity));
+            font-size: 20px;
+            color: $color-text-secondary;
             letter-spacing: 0.05em;
             text-transform: uppercase;
             margin: 0;
+
+            @include mobile {
+                font-size: 16px;
+            }
         }
 
         .sectionHeadText {
-            font-size: 60px;
-            --tw-text-opacity: 1;
-            color: rgb(255 255 255 / var(--tw-text-opacity));
+            font-size: $text-large;
+            color: $color-text-secondary;
             font-weight: 900;
             margin: 0;
+
+            @include mobile {
+                font-size: 36px;
+            }
         }
 
         .text-p {
-            --tw-text-opacity: 1;
-            color: rgb(170 166 195 / var(--tw-text-opacity));
+            color: $color-text-secondary;
             line-height: 30px;
-            font-size: 17px;
+            font-size: $text-small;
             max-width: 48rem;
             margin-top: 1rem;
-        }
-
-        /* .title {
-            display: flex;
-            align-items: center;
-            gap: 50px;
 
             @include mobile {
-                flex-direction: column;
-                text-align: center;
-                gap: 20px;
+                font-size: 16px;
             }
-        } */
+        }
     }
 
     .listContainer {
         display: flex;
         justify-content: center;
         max-width: 100%;
-        margin-top: 30px;
 
-
-        @include mobile {
-            flex-direction: column;
+        .cardss {
+            display: flex;
+            margin-top: 1rem;
+            //flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
             width: 100%;
-        }
-
-        .listContent {
-            display: flex;
-            align-items: center;
-            width: 70%;
-            gap: 10px;
-        }
-
-        .box {
-            padding: 50px;
-            /* border: 0.5px solid gray; */
-            background-color: #09090c;
-            /* opacity: 0.5; */
-            border-radius: 8px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: flex-start;
 
             @include mobile {
-                border: none;
-                align-items: center;
-                gap: 20px;
-                padding: 10px;
+                display: grid;
+                grid-template-rows: auto auto;
+                grid-template-columns: auto auto;
             }
 
-            .card {
-                position: relative;
-                width: 300px;
-                height: 400px;
-                overflow: hidden;
-                border-radius: 15px;
-                background-color: #070709;
-                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-                transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275),
-                    box-shadow 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            }
-
-            .card:hover {
-                transform: scale(1.1) rotate(10deg);
-                box-shadow: 0 20px 40px rgba(0, 0, 0, 0.7);
-            }
-
-            .card:hover {
-                opacity: 0.9;
-            }
-
-            .card:hover .card-image {
-                transform: scale(1.2);
-            }
-
-            .card-image {
-                height: 60%;
-                background-size: cover;
-                background-position: center;
-                clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-                filter: grayscale(50%);
-            }
-
-            @keyframes pulse {
-                to {
-                    transform: scale(1.1);
-                }
-            }
-
-            .card-text {
-                padding: 20px;
-                text-align: center;
-                color: #ecf0f1;
-                transition: transform 0.3s ease-in-out;
-
-                h2 {
-                    margin: 0;
-                    font-size: 24px;
-                }
-
-                p {
-                    margin: 10px 0 0;
-                    font-size: 14px;
-                    opacity: 0.8;
-                }
-            }
-
-            .card:hover .card-text {
-                transform: translate(0, -10px);
-            }
-
-            .card::before {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
-                z-index: 1;
-            }
-
-            .card:hover .card-text {
-                text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            }
-
-            .card-image {
-                box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+            @include sm {
+                display: flex;
+                flex-direction: column;
             }
         }
     }
 
-
-    .cardss {
-        gap: 2.5rem;
-        flex-wrap: wrap;
+    .modal {
         display: flex;
-        margin-top: 5rem;
-        width: 70%;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        z-index: 1000;
+
+        .closeBtn {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            top: 0%;
+            right: 0%;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .modal-content {
+            background: #2c2d31;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            text-align: left;
+            overflow-y: auto;
+            display: flex;
+            position: absolute;
+            top: 70px;
+            bottom: 70px;
+            width: 800px;
+            left: 50%;
+            border-radius: 10px;
+            transform: translateX(-50%);
+            background-color: #222;
+
+
+
+            @include large {
+                width: 700px;
+            }
+
+            @include mobile {
+                width: 300px;
+                display: flex;
+                flex-direction: column;
+            }
+
+            ul {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+
+                li {
+                    margin: 0 0 8px;
+                    width: 100%;
+                    float: left;
+                    position: relative;
+                    padding-left: 25px;
+                    width: 100%;
+                    float: left;
+                    border-bottom: 1px dashed hsla(0, 0%, 100%, .15);
+                    color: $color-text-secondary;
+                    padding-bottom: 7px;
+                    margin: 0 0 7px;
+
+                    svg {
+                        color: $color-text-primary;
+                    }
+
+                    a {
+                        text-decoration: none;
+                        padding-left: 25px;
+                        color: $color-text-secondary;
+
+                        &:hover {
+                            color: $color-text-primary;
+                        }
+                    }
+                }
+            }
+
+            .infoContent {
+                margin-bottom: 55px;
+
+                p {
+                    font-size: $text-small;
+                    margin-bottom: 10px;
+                    line-height: 1.7;
+                    letter-spacing: .2px;
+                    color: $color-text-secondary;
+                    word-wrap: break-word;
+                }
+            }
+
+            .author {
+                margin-bottom: 35px;
+                text-align: center;
+                overflow: hidden;
+
+                h2 {
+                    font-size: 24px;
+                    margin-bottom: 10px;
+                    color: $color-text-secondary;
+
+                    span {
+                        color: $color-text-primary
+                    }
+                }
+
+            }
+
+            .list {
+                width: 100%;
+                float: left;
+                margin-bottom: 35px;
+
+                .btnCv {
+                    background: $color-text-primary;
+                    border-width: 0;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    font-size: 15px;
+                    height: 50px;
+                    width: 100%;
+                    letter-spacing: 5px;
+                    padding: 0 20px;
+                    margin-top: 1rem;
+                }
+            }
+        }
+
+        .modal-content::-webkit-scrollbar {
+            width: 0px;
+        }
+
+        .divImg {
+            overflow: hidden;
+            border-radius: 4px;
+            width: 40%;
+            padding: 50px 40px;
+            border-right: 1px dashed hsla(0, 0%, 100%, .1);
+
+            @include mobile {
+                overflow: visible;
+                width: auto;
+                border-right: none;
+                padding: 0;
+                margin-bottom: 40px;
+            }
+
+            img {
+                width: 130px;
+                height: 130px;
+                object-fit: cover;
+                filter: grayscale(100%);
+                border-radius: 50%;
+                margin: 0 auto 25px;
+            }
+        }
+
+        .rightSide {
+            width: 60%;
+            padding: 50px 40px;
+
+            @include mobile {
+                width: 100%;
+                padding: 0;
+            }
+
+            h1 {
+                border-bottom: 1px dashed hsla(0, 0%, 100%, .15);
+                color: $color-text-secondary;
+                padding-bottom: 15px;
+                margin-bottom: 29px;
+            }
+        }
+    }
+}
+
+.tiltContainerr {
+    width: 20rem;
+
+    svg {
+        position: relative;
+        top: 13%;
+        left: 85%;
+        width: 25px;
+        height: auto;
+        color: $color-text-primary;
+        cursor: pointer;
     }
 
-    .titleContainerr {
-        width: 250px
+    @include mobile {
+        width: 16rem;
     }
 
     .tiltContent {
-        background: "#00cea8";
-        background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
-        background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
-        --tw-shadow: 0px 35px 120px -15px #211e35;
-        --tw-shadow-colored: 0px 35px 120px -15px var(--tw-shadow-color);
-        box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+        background: $color-bg-neutral;
         padding: 1px;
-        border-radius: 20px;
+        border-radius: 5px;
 
-        width: 100%;
+        .description {
+            padding-top: 1.25rem;
+            padding-bottom: 1.25rem;
+            padding-left: 2rem;
+            padding-right: 2rem;
+            justify-content: space-evenly;
+            align-items: flex-start;
+            flex-direction: column;
+            min-height: 20rem;
+            display: flex;
+            text-align: center;
+
+            p {
+                color: $color-text-secondary;
+                text-align: start;
+            }
+
+            .img {
+                object-fit: contain;
+                width: 4rem;
+                height: 4rem;
+                filter: grayscale(65%);
+            }
+
+            .text {
+                color: $color-text-secondary;
+                font-weight: 900;
+                font-size: 22px;
+                text-align: center;
+            }
+
+            .spanColor {
+                display: flex;
+                gap: 10px;
+                flex-wrap: wrap;
+
+                span {
+                    font-size: 15px;
+                    text-align: start;
+                }
+            }
+        }
     }
-
-    .description {
-        padding-top: 1.25rem;
-        padding-bottom: 1.25rem;
-        padding-left: 3rem;
-        padding-right: 3rem;
-        background-color: rgb(21, 16, 48, 1);
-        border-radius: 20px;
-        justify-content: space-evenly;
-        align-items: center;
-        flex-direction: column;
-        min-height: 20rem;
-        width: 360px;
-        display: flex;
-        text-align: center;
-    }
-
-    .img {
-        -o-object-fit: contain;
-        object-fit: contain;
-        width: 4rem;
-        height: 4rem;
-    }
-
-    .text {
-        --tw-text-opacity: 1;
-        color: rgb(255, 255, 255, 1);
-        font-weight: 700;
-        font-size: 20px;
-        text-align: center;
-    }
-
-    .spanColor{
-        display: flex;
-        gap: 10px;
-    }
-
 }
