--- a/src/components/cursor/cursor.scss
+++ b/src/components/cursor/cursor.scss
@@ -1,15 +1,34 @@
 @import "../../app.scss";
 
-.cursor{
-  width: 50px;
-  height: 50px;
+.cursor {
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
-  //border: 1px solid white;
+  border: 1px solid white;
   position: fixed;
-  z-index: 999;
-  background: $color-text-primary;
+  z-index: 9999;
+  transition: background-color 0.3s, transform 0.3s;
 
-  @include mobile{
-    display: none;
+  &.clicked {
+    border: 1px solid $color-text-primary;
+    transform: scale(1.2);
+    animation: clickAnimation 0.3s ease-out;
+  }
+
+  cursor: none;
+  pointer-events: none;
+}
+
+@keyframes clickAnimation {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.4);
+  }
+
+  100% {
+    transform: scale(1);
   }
 }
