--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -25,6 +25,10 @@
     -webkit-box-reflect: below -1px -webkit-gradient(linear, left top, left bottom, from(transparent),
         color-stop(80%, transparent), to(rgba(250, 250, 250, 0.5)));
 
+        @include mobile {
+          width: 300px;
+        }
+
     img {
       height: 100%;
       transform: scale(1.2);
@@ -34,6 +38,22 @@
       &:hover {
         filter: grayscale(0);
         transform: scale(1);
+
+        ~.text {
+          transform: rotateX(0deg);
+        }
+
+        ~ul li {
+          color: #000;
+          transform: rotatey(0deg);
+        
+          li:first-of-type {
+            transition-delay: .5s;
+          }
+  
+          li:nth-of-type(2) {
+            transition-delay: .7s;
+          }}
       }
 
       @include sm {
@@ -53,10 +73,6 @@
       background-color: #fff;
       transform-origin: bottom;
       transition: .7s ease-in-out;
-
-      &:hover {
-        transform: rotateX(0deg);
-      }
     }
 
     ul {
@@ -64,7 +80,7 @@
       text-align: center;
       position: absolute;
       top: 0;
-
+    
       li {
         background-color: #FFF;
         width: 45px;
@@ -75,26 +91,27 @@
         transform-origin: left;
         cursor: pointer;
         transition: .5s ease-in-out;
-
+    
         &:hover {
           color: #000;
           transform: rotatey(0deg);
         }
-
+    
+        &:first-of-type {
+          transition-delay: .5s;
+        }
+    
+        &:nth-of-type(2) {
+          transition-delay: .7s;
+        }
+    
         svg {
           width: 20px;
           height: 20px;
         }
-
-        li:first-of-type {
-          transition-delay: .5s;
-        }
-
-        li:nth-of-type(2) {
-          transition-delay: .7s;
-        }
       }
     }
+    
 
     .skewd {
       background-color: rgb(255, 255, 255);
@@ -114,130 +131,149 @@
       }
     }
   }
-}
 
-.modal {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  .modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    z-index: 1000;
 
-  button {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    top: 10%;
-    right: 25%;
-    padding: 10px;
-    background: $color-text-primary;
-    border: none;
-    cursor: pointer;
-  }
-
-  .modal-content {
-    background: $color-bg-neutral;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    text-align: left;
-    max-width: 40%;
-    max-height: 80vh;
-    overflow-y: auto;
-
-    img {
-      max-width: 100%;
-      height: auto;
-      object-fit: cover;
-      filter: grayscale(0);
+    .closeBtn {
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      top: 0%;
+      right: 0%;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
     }
 
-    h2 {
-      font-size: 24px;
-      margin-bottom: 10px;
-      color: $color-text-secondary;
-    }
+    .modal-content {
+      background: #2c2d31;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      text-align: left;
+      overflow-y: auto;
+      position: absolute;
+      top: 70px;
+      bottom: 70px;
+      width: 800px;
+      left: 50%;
+      border-radius: 10px;
+      transform: translateX(-50%);
+      background-color: #222;
 
-    p {
-      font-size: $text-small;
-      margin-bottom: 10px;
-      line-height: 1.7;
-      letter-spacing: .2px;
-      color: $color-text-secondary;
-      word-wrap: break-word;
-    }
+      padding: 50px 50px 20px;
 
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      gap: 10px;
+      @include large {
+        width: 700px;
+      }
 
-      li {
-        font-size: 20px;
+      @include mobile {
+        width: 300px;
+        padding: 50px 20px 50px;
+      }
+
+
+
+      h2 {
+        font-size: 24px;
+        margin-bottom: 25px;
+        color: $color-text-secondary;
+      }
+
+      p {
+        font-size: $text-small;
+        margin-bottom: 10px;
+        line-height: 1.7;
+        letter-spacing: .2px;
+        color: $color-text-secondary;
+        word-wrap: break-word;
+      }
+
+      ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        gap: 10px;
+
+        li {
+          font-size: 20px;
+        }
       }
     }
 
-    button {
-      background: #1C1E23;
-      border-width: 0;
-      border-radius: 5px;
-      color: #ffffff;
-      cursor: pointer;
-      font-size: 15px;
-      height: 50px;
-      width: 15.625rem;
-      letter-spacing: 5px;
-      padding: 0 20px;
-      margin-top: 1rem;
+    .modal-content::-webkit-scrollbar {
+      width: 0px;
     }
-  }
 
-  .modal-content::-webkit-scrollbar {
-    width: 0px;
-  }
+    .divImg {
+      overflow: hidden;
+      border-radius: 4px;
+      margin-bottom: 10px;
 
-  .divImg {
-    overflow: hidden;
-    border-radius: 4px;
-    margin-bottom: 10px;
-  }
+      .imgTitle {
+        position: relative;
+        margin-bottom: 25px;
 
-  .image-gallery {
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    width: 100%;
-    height: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 50%;
+        border-radius: 10px;
 
-    img {
+        img {
+          max-width: 100%;
+          height: auto;
+          object-fit: cover;
+          filter: grayscale(0);
+
+          position: relative;
+
+          min-width: 100%;
+
+        }
+      }
+    }
+
+    .image-gallery {
+      display: grid;
+      grid-template-rows: repeat(1, 1fr);
+      grid-template-columns: repeat(2, 1fr);
+      margin-top: 25px;
+      gap: 20px;
       width: 100%;
-      height: auto;
-      cursor: pointer;
-      border: 2px solid transparent;
-      object-fit: cover;
-    }
 
-    .image-wrapper {
-      grid-area: 1 / 1 / 3 / 3;
-      overflow: hidden;
-    }
+      @include mobile {
+        display: flex;
+        flex-direction: column;
+      }
 
-    .image-wrapper-1 {
-      grid-area: 3/1/4/2;
-      overflow: hidden;
-    }
+      img {
+        width: 100%;
+        height: auto;
+        cursor: pointer;
+        border: 2px solid transparent;
+        object-fit: cover;
+      }
 
-    .image-wrapper-2 {
-      grid-area: 3/2/4/3;
-      overflow: hidden;
+      .image-wrapper-1 {
+        grid-area: 3/1/4/2;
+        overflow: hidden;
+      }
+
+      .image-wrapper-2 {
+        grid-area: 3/2/4/3;
+        overflow: hidden;
+      }
     }
   }
 }
