--- a/src/components/social/social.scss
+++ b/src/components/social/social.scss
@@ -8,7 +8,7 @@ $speed: 0.5s;
   top: 80%;
   display: flex;
   justify-content: center;
-  z-index: -1;
+  z-index: 1;
 
   @include mobile {
     display: none;
@@ -29,9 +29,9 @@ $speed: 0.5s;
   z-index: 99;
 
   .btn-flip {
-
     width: 50px;
     //height: 50px;
+    cursor: pointer;
 
     svg {
       color: white;
@@ -42,11 +42,6 @@ $speed: 0.5s;
   }
 
 }
-
-
-$indicatorSize: 40px;
-$lineWidth: 2px;
-$textSize: 1.3rem;
 
 .scroll-indicator {
   transform: translateX(-50%);
@@ -60,13 +55,13 @@ $textSize: 1.3rem;
 .scroll-text {
   writing-mode: vertical-lr;
   transform: rotate(360deg);
-  font-size: $textSize;
+  font-size: 1.3rem;
   margin-bottom: 15px;
   color: white;
 }
 
 .scroll-line {
-  width: $lineWidth;
-  height: $indicatorSize;
+  width: 2px;
+  height: 40px;
   background-color: white;
 }
