--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -248,6 +248,10 @@
                     }
                 }
 
+                p {
+                    color: $color-text-secondary;
+                }
+
             }
 
             .list {
