--- a/src/components/cursor/cursor.scss
+++ b/src/components/cursor/cursor.scss
@@ -9,6 +9,10 @@
   z-index: 9999;
   transition: background-color 0.3s, transform 0.3s;
 
+  @include mobile {
+    display: none;
+  }
+
   &.clicked {
     border: 1px solid $color-text-primary;
     transform: scale(1.2);
