--- a/src/components/social/social.scss
+++ b/src/components/social/social.scss
@@ -28,9 +28,14 @@ $speed: 0.5s;
   justify-content: space-between;
   z-index: 99;
 
+  @include fix{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+  }
+
   .btn-flip {
     width: 50px;
-    //height: 50px;
     cursor: pointer;
 
     svg {
@@ -58,10 +63,18 @@ $speed: 0.5s;
   font-size: 1.3rem;
   margin-bottom: 15px;
   color: white;
+
+  @include fix{
+    writing-mode: horizontal-tb;
+  }
 }
 
 .scroll-line {
   width: 2px;
   height: 40px;
   background-color: white;
+
+  @include fix{
+    display: none;
+  }
 }
