--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -2,135 +2,83 @@
 
 .aboutContainer {
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    .titleContainer {
-        //width: 50%;
+    .ssd {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        width: 80%;
 
-        @include mobile {
-            width: 100%;
-        }
-
-        .ssd {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            width: 100%;
-            align-items: flex-start;
-
-            button {
-                background: #1C1E23;
-                border-width: 0;
-                border-radius: 5px;
-                color: #ffffff;
-                cursor: pointer;
-                font-size: 15px;
-                height: 50px;
-                width: 15.625rem;
-                letter-spacing: 5px;
-                padding: 0 20px;
-                margin-top: 1rem;
-                animation: customAni 2s ease 0s infinite normal none;
-
-                &:hover {
-                    color: $color-text-primary;
-                }
-
-                @keyframes customAni {
-                    0% {
-                        animation-timing-function: ease-out;
-                        transform: scale(1);
-                        transform-origin: center center;
-                    }
-
-                    10% {
-                        animation-timing-function: ease-in;
-                        transform: scale(0.91);
-                    }
-
-                    17% {
-                        animation-timing-function: ease-out;
-                        transform: scale(0.98);
-                    }
-
-                    33% {
-                        animation-timing-function: ease-in;
-                        transform: scale(0.87);
-                    }
-
-                    45% {
-                        animation-timing-function: ease-out;
-                        transform: scale(1);
-                    }
-                }
-            }
-        }
-
-        .sectionSubText {
-            font-size: 20px;
-            color: $color-text-secondary;
-            letter-spacing: 0.05em;
-            text-transform: uppercase;
-            margin: 0;
-
-            @include mobile {
-                font-size: 16px;
-            }
-        }
-
-        .sectionHeadText {
-            font-size: $text-large;
-            color: $color-text-secondary;
-            font-weight: 900;
-            margin: 0;
-
-            @include mobile {
-                font-size: 36px;
-            }
-        }
-
-        .text-p {
-            color: $color-text-secondary;
-            line-height: 30px;
-            font-size: $text-small;
-            max-width: 48rem;
+        button {
+            background: #1C1E23;
+            border-width: 0;
+            border-radius: 5px;
+            color: #ffffff;
+            cursor: pointer;
+            font-size: 15px;
+            height: 50px;
+            width: 15.625rem;
+            letter-spacing: 5px;
+            padding: 0 20px;
             margin-top: 1rem;
-
-            @include mobile {
-                font-size: 16px;
-            }
         }
     }
 
-    .listContainer {
+    .sectionSubText {
+        font-size: 20px;
+        color: $color-text-secondary;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        margin: 0;
+
+        @include mobile {
+            font-size: 16px;
+        }
+    }
+
+    .sectionHeadText {
+        font-size: $text-large;
+        color: $color-text-secondary;
+        font-weight: 900;
+        margin: 0;
+
+        @include mobile {
+            font-size: 36px;
+        }
+    }
+
+    .text-p {
+        color: $color-text-secondary;
+        line-height: 30px;
+        font-size: $text-small;
+        max-width: 48rem;
+        margin-top: 1rem;
+
+        @include mobile {
+            font-size: 16px;
+        }
+    }
+
+    .cardss {
         display: flex;
+        margin-top: 1rem;
+        gap: 20px;
+        width: 100%;
         justify-content: center;
-        max-width: 100%;
 
-        .cardss {
+        @include mobile {
+            display: grid;
+            grid-template-rows: auto auto;
+            grid-template-columns: auto auto;
+        }
+
+        @include sm {
             display: flex;
-            margin-top: 1rem;
-            //flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            width: 100%;
-
-            @include mobile {
-                display: grid;
-                grid-template-rows: auto auto;
-                grid-template-columns: auto auto;
-            }
-
-            @include sm {
-                display: flex;
-                flex-direction: column;
-            }
+            flex-direction: column;
         }
     }
 
@@ -195,7 +143,7 @@
                     width: 100%;
                     float: left;
                     position: relative;
-                    padding-left: 25px;
+                    padding-left: 20px;
                     width: 100%;
                     float: left;
                     border-bottom: 1px dashed hsla(0, 0%, 100%, .15);
@@ -257,6 +205,10 @@
                 width: 100%;
                 float: left;
                 margin-bottom: 35px;
+
+                .icon {
+                    margin-right: 15px;
+                }
 
                 .btnCv {
                     background: $color-text-primary;
@@ -324,6 +276,10 @@
 .tiltContainerr {
     width: 20rem;
 
+    @include mobile {
+        width: 18rem;
+    }
+
     svg {
         position: relative;
         top: 13%;
@@ -334,9 +290,6 @@
         cursor: pointer;
     }
 
-    @include mobile {
-        width: 16rem;
-    }
 
     .tiltContent {
         background: $color-bg-neutral;
