--- a/src/components/menu/tabMenu.scss
+++ b/src/components/menu/tabMenu.scss
@@ -9,18 +9,17 @@
   margin: 0;
   width: 100%;
   display: flex;
-  font-size: 1.5em;
+  font-size: 1.2em;
   padding: 0 0.85em;
+  /* left: 5%; */
   position: fixed;
-  bottom: 0px;
-  align-items: center;
-  justify-content: center;
+  border-radius: 20px;
+  bottom: 5px;
   background: rgba(255, 255, 255, 0.45);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(2.5px);
   -webkit-backdrop-filter: blur(2.5px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
   z-index: 9999;
+  transition: transform 0.3s ease; 
 
   &__item {
     all: unset;
@@ -45,16 +44,17 @@
     &::before {
       content: "";
       z-index: -1;
-      width: 3em;
-      height: 3em;
-      border-radius: 50%;
+      width: 3.5em;
+      top: 0;
+      height: 0.23em;
+      /* border-radius: 50%; */
       position: absolute;
       transform: scale(0);
       transition: background-color var(--duration), transform var(--duration);
     }
 
     &.active {
-      transform: translate3d(0, -0.8em, 0);
+      //transform: translate3d(0, -0.8em, 0);
 
       &::before {
         transform: scale(1);
@@ -66,7 +66,7 @@
       }
 
       /* svg {
-        color: #070709;
+        color: #ffb457;
       } */
     }
 
