--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,132 +1,118 @@
 @import "../../app.scss";
 
 .portfolio {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  gap: 3%;
+  position: relative;
+  margin-top: 10%;
 
-  @include sm {
-    flex-direction: column;
-  }
+  .progress {
+    position: sticky;
+    bottom: 20px;
+    left: 0;
+    text-align: center;
+    color: $color-text-secondary;
+    font-size: 36px;
 
-  @include mobile {
-    padding: 5%;
+    @include mobile {
+      font-size: 24px;
+    }
+
+    .progressBar {
+      height: 2px;
+      background-color: $color-text-secondary;
+    }
   }
 
   .container {
-    width: 400px;
-    height: 450px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    position: relative;
-    cursor: pointer;
-    border-radius: 5px;
-    box-shadow: 0 0 20px #000;
-    -webkit-box-reflect: below -1px -webkit-gradient(linear, left top, left bottom, from(transparent),
-        color-stop(80%, transparent), to(rgba(250, 250, 250, 0.5)));
 
-    @include mobile {
-      width: 300px;
-    }
-
-    img {
+    .wrapper {
+      max-width: 1366px;
       height: 100%;
-      width: 100%;
-      display: block;
-      transition: .7s ease-in-out;
+      //margin: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 50px;
 
-      &:hover {
-        filter: grayscale(100%);
-        transform: scale(1.2);
+      @include mobile {
+        flex-direction: column;
+        justify-content: center;
+      }
 
-        ~.text {
-          transform: rotateX(0deg);
+      .imageContainer {
+        flex: 1;
+        height: 50%;
+
+        @include mobile {
+          width: 100%;
+          max-height: 300px;
         }
 
-        ~ul li {
-          color: #000;
-          transform: rotatey(0deg);
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          //filter: grayscale(50);
 
-          li:first-of-type {
-            transition-delay: .5s;
-          }
-
-          li:nth-of-type(2) {
-            transition-delay: .7s;
+          @include mobile {
+            object-fit: contain;
           }
         }
       }
 
+      .textContainer {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        align-items: flex-start;
+        height: 50%;
+        justify-content: center;
 
-    }
-
-    .text {
-      width: 100%;
-      padding: 10px;
-      font-weight: bold;
-      text-align: center;
-      position: absolute;
-      bottom: 0;
-      transform: rotateX(90deg) perspective(100px);
-      background-color: #fff;
-      transform-origin: bottom;
-      transition: .7s ease-in-out;
-    }
-
-    ul {
-      list-style: none;
-      text-align: center;
-      position: absolute;
-      top: 0;
-
-      li {
-        background-color: #FFF;
-        width: 45px;
-        height: 45px;
-        margin-bottom: 5px;
-        padding: 10px;
-        transform: rotatey(-90deg) perspective(100px);
-        transform-origin: left;
-        cursor: pointer;
-        transition: .5s ease-in-out;
-
-        &:hover {
-          color: #000;
-          transform: rotatey(0deg);
+        @include mobile {
+          transform: none !important;
+          flex: none;
+          padding: 10px;
+          align-items: center;
+          text-align: center;
         }
 
-        &:first-of-type {
-          transition-delay: .5s;
+        h2 {
+          font-size: $text-large;
+          font-family: 'Cera CY Bold';
+          color: $color-text-secondary;
+
+          @include mobile {
+            font-size: 36px;
+          }
         }
 
-        &:nth-of-type(2) {
-          transition-delay: .7s;
+        p {
+          color: $color-text-secondary;
+          font-size: $text-small;
+          text-align: justify;
+          letter-spacing: 1px;
+
+          @include mobile {
+            font-size: 16px;
+          }
         }
 
-        svg {
-          width: 20px;
-          height: 20px;
+        button {
+          background: #1C1E23;
+          border-width: 0;
+          color: #ffffff;
+          cursor: pointer;
+          font-size: 18px;
+          height: 52px;
+          letter-spacing: 5px;
+          padding: 0 50px;
         }
-      }
-    }
-
-
-    .skewd {
-      background-color: rgb(255, 255, 255);
-      opacity: .4;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      transform: skewX(45deg);
-      top: 0;
-      right: -170%;
-      z-index: 1;
-      transition: 1s ease-in-out;
-
-      &:hover {
-        right: 170%;
-        transition-delay: 2s;
       }
     }
   }
@@ -181,8 +167,6 @@
         padding: 50px 20px 50px;
       }
 
-
-
       h2 {
         font-size: 24px;
         margin-bottom: 25px;
@@ -236,42 +220,35 @@
           filter: grayscale(0);
 
           position: relative;
-
           min-width: 100%;
 
         }
       }
     }
 
-    .image-gallery {
-      display: grid;
-      grid-template-rows: repeat(1, 1fr);
-      grid-template-columns: repeat(2, 1fr);
-      margin-top: 25px;
-      gap: 20px;
-      width: 100%;
+    .infoProject {
+      .btnLinks {
+        a{
+          display: inline-flex;
+          align-items: center; 
+          padding: 5px 10px; 
+          border: 1px solid $color-text-secondary;
+          border-radius: 5px; 
+          margin-left: 15px;
+          text-decoration: none;
+          color: $color-text-secondary;
+          cursor: pointer;
+          transition: background-color 0.3s ease;
 
-      @include mobile {
-        display: flex;
-        flex-direction: column;
-      }
+          &:hover{
+            background: $color-bg-primary;
+          }
 
-      img {
-        width: 100%;
-        height: auto;
-        cursor: pointer;
-        border: 2px solid transparent;
-        object-fit: cover;
-      }
+          svg{
+            margin-right: 10px;
+          }
 
-      .image-wrapper-1 {
-        grid-area: 3/1/4/2;
-        overflow: hidden;
-      }
-
-      .image-wrapper-2 {
-        grid-area: 3/2/4/3;
-        overflow: hidden;
+        }
       }
     }
   }
