--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -69,6 +69,8 @@
         gap: 20px;
         width: 100%;
         justify-content: center;
+        position: relative;
+        z-index: 99;
 
         @include mobile {
             display: grid;
@@ -79,6 +81,7 @@
         @include sm {
             display: flex;
             flex-direction: column;
+            align-items: center;
         }
     }
 
@@ -210,17 +213,19 @@
                     margin-right: 15px;
                 }
 
-                .btnCv {
-                    background: $color-text-primary;
-                    border-width: 0;
-                    border-radius: 5px;
-                    cursor: pointer;
-                    font-size: 15px;
-                    height: 50px;
-                    width: 100%;
-                    letter-spacing: 5px;
-                    padding: 0 20px;
-                    margin-top: 1rem;
+                a {
+                    .btnCv {
+                        background: $color-text-primary;
+                        border-width: 0;
+                        border-radius: 5px;
+                        cursor: pointer;
+                        font-size: 15px;
+                        height: 50px;
+                        width: 100%;
+                        letter-spacing: 5px;
+                        padding: 0 20px;
+                        margin-top: 1rem;
+                    }
                 }
             }
         }
